# mail-scheduler

./: .bandit  .dockerignore  .env.example  .env.test  .gitignore  .pep8  .pre-commit-config.yaml  .pylintrc  .safety-policy.json  .safety-project.ini  .semgrepignore  .snyk  Dockerfile  Dockerfile.scheduler  README.md  SECURITY.md  VERCEL_DEPLOYMENT.md  check_dependencies.py  cookies.txt  debug_path.py  deploy_to_vercel.sh  docker-compose.yml  docker-entrypoint.sh  generate_docs.py  pyproject.toml  pytest.ini  requirements-loose.txt  requirements-vercel.txt  requirements.txt  reset_db.py  run_tests.py  scheduler-entrypoint.sh  serve.py  setup.cfg  setup.py  setup.sh  test-ci-local.sh  test_imports.py  test_markup_imports.py  test_postgres_connection.py  (+5 more)
.github/: BADGES.md  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pr-checks.yml  scheduled-tests.yml  security-sast.yml
api/: cron_dispatcher.py  index.py  serverless_handler.py  vercel_app.py
app/: __init__.py  commands.py  config.py  extensions.py  vercel_app.py  vercel_config.py  vercel_extensions.py
app/api/: __init__.py  routes.py
app/auth/: __init__.py  forms.py  views.py
app/auth/templates/auth/: change_password.html  edit_user.html  login.html  users.html
app/database/: __init__.py  init_db.py  models.py  models_core.py  vercel_db.py
app/database/models/: __init__.py  user.py
app/event/: forms.py  jobs.py  save_email.py  services.py  views.py
app/event/templates/: add_event.html  all_events.html  delete_event.html  edit_event.html
app/services/: README.md  __init__.py  base.py  event_service.py  recipient_service.py  user_service.py
app/templates/: base.html
app/templates/auth/: register.html  users.html
app/utils/: __init__.py  patch_sqlalchemy.py  rq_patch.py  security.py
docs/source/: api.rst  architecture.rst  conf.py  index.rst  modules.rst
tests/: conftest.py  test_app_init.py  test_app_init_enhanced.py  test_commands.py  test_commands_integration.py
tests/api/: test_api_routes.py  test_endpoints.py  test_routes.py
tests/database/: test_database.py  test_database_init.py
tests/event/: test_forms_event.py  test_forms_validators.py  test_jobs.py  test_jobs_comprehensive.py  test_jobs_enhanced.py  test_views.py
tests/jobs/: test_email.py  test_error_handling.py  test_job_functions.py  test_jobs_integration.py  test_scheduler.py
tests/jobs/bak/: test_email.py  test_error_handling.py  test_job_functions.py  test_jobs_integration.py  test_scheduler.py
tests/models/: test_model_advanced.py  test_models.py
