[options]
install_requires =
    Flask>=2.3.2,<3.0.0
    flask-restx>=1.2.0,<2.0.0
    Werkzeug>=2.3.7,<4.0.0
    jsonschema>=4.17.3,<5.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-flask>=1.2.0
    pytest-cov>=4.1.0
    black
    flake8
    mypy

[flake8]
exclude =
    tests/,
    .venv/,
    venv/,
    venv_py311/,
    vercel-test-env/,
    machine-learning/,
    .git,
    __pycache__,
    build/,
    dist/,
    *.egg-info/
max-line-length = 88
